test position fixed overlay with input on ios

--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+.full-screen-wrapper {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+}
+
 input {
     font-size: 14px;
+    width: 100%;
 }
